improve text extraction and model matching

--- a/scripts/models/model-v1.ipynb
+++ b/scripts/models/model-v1.ipynb
@@ -25,8 +25,8 @@
    "outputs": [],
    "source": [
     "PROJECT_PATH = \"d:\\My Work\\My Subjects\\Do an tot nghiep\\code\\job-recommendation-system\"\n",
-    "RESUME_DATA_PATH = \"data\\\\resumes\\\\resumes.json\"\n",
-    "JOB_DESC_PATH = \"data\\\\jds\\\\jobs.json\" "
+    "RESUME_DATA_PATH = \"data\\\\resumes\\\\resumes2.json\"\n",
+    "JOB_DESC_PATH = \"data\\\\jds\\\\jobs2.json\" "
    ]
   },
   {
@@ -50,7 +50,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "jobsData = readDoc(os.join(PROJECT_PATH, JOB_DESC_PATH))\n",
+    "resumeData = readDoc(os.join(PROJECT_PATH, RESUME_DATA_PATH))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = jobsData[0][\"\"]"
+   ]
   }
  ],
  "metadata": {
